--- a/views/views.xml
+++ b/views/views.xml
@@ -1,13 +1,13 @@
 <odoo>
   <data>
     
-    <record model="ir.ui.view" id="view_order_form">
-      <field name="name">sale.order.form</field>
-      <field name="model">sale.order</field>
-      <field name="inherit_id" ref="sale.view_order_form" />
+    <record model="ir.ui.view" id="view_res_partner_form_inherit">
+      <field name="name">Helium Custom Fields</field>
+      <field name="model">res.partner</field>
+      <field name="inherit_id" ref="base.view_partner_form" />
       <field name="arch" type="xml">
         <field name="payment_term_id" position="after">
-          <field name="quality_survey" />
+          <field name="customer_note" string="Nota del cliente" />
         </field>
       </field>
     </record>
